crates/aven-check/tests/fixtures/check/invalid/call-arg-array.av
f : (Text) -> Int
f = (x) => { text: x, value: 1 }.value
result : Array(Int) = [f(42)]
